<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_light_primary"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingEnd="@dimen/spacing_medium"
            android:paddingRight="@dimen/spacing_medium"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_hint"
                    android:imeOptions="actionSearch"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_white">

                    <requestFocus />

                </EditText>

                <ImageButton
                    android:id="@+id/bt_clear"
                    android:layout_width="@dimen/spacing_xxlarge"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_clear"
                    android:contentDescription="@string/clear_search"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/parent_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/item_offset"
                android:scrollbars="none"
                android:scrollingCache="true" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <include
                android:id="@+id/lyt_no_item"
                layout="@layout/include_no_result"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/lyt_suggestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_white"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_suggestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none"
                    android:scrollingCache="true"
                    android:contentDescription="@string/content_web"/>

                <View
                    android:id="@+id/bg_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>
